backend/notifications/kubernetes/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: notification
          ports:
            - containerPort: 8006
          command: ["python", "manage.py", "runserver", "0.0.0.0:8006"]
          volumeMounts:
            - name: notifications-volume
              mountPath: /notifications
        - name: consumer
          image: notification
          command: ["python", "consumer.py"]
          volumeMounts:
            - name: notifications-volume
              mountPath: /notifications
      volumes:
        - name: notifications-volume
          emptyDir: {}
